[gd_scene load_steps=4 format=3 uid="uid://bknm3xrst1afj"]

[ext_resource type="Script" path="res://scene/game/inventory/item_container.gd" id="1_jwopd"]
[ext_resource type="Texture2D" uid="uid://f5025s04u64l" path="res://asset/image/ui/inven_slot.png" id="2_akrcm"]
[ext_resource type="Theme" uid="uid://oagauisywtfc" path="res://theme/ui_label_theme.tres" id="3_avd4k"]

[node name="ItemContainer" type="MarginContainer" groups=["item_slot"]]
script = ExtResource("1_jwopd")

[node name="TextureRectBG" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_akrcm")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_avd4k")
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
